Integrate Weld and JMockit with the jqwick test framework
Jqwick allows for the creation of lifecycle hooks which allow us to plug
into the test lifecycle of a running test class.

The JMockit support is not completed. However, we can extend it as needed
when the test suite grows.